[misc] update db settings.

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,17 @@ development:
     database: development_auth_db
     port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %> # FIXME: change replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_PUB"] : 'localhost' %>
+  docs:
+    <<: *default
+    database: development_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
+  docs_replica:
+    <<: *default
+    replica: true
+    database: development_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
   core:
     <<: *default
     database: development_core_db
@@ -53,6 +64,17 @@ test:
     database: test_auth_db
     port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_SUB"] : 'localhost' %>
+  docs:
+    <<: *default
+    database: test_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
+  docs_replica:
+    <<: *default
+    replica: true
+    database: test_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
   core:
     <<: *default
     database: test_core_db
