[CREATED] codes for know to staging env.

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ SELENIUM_REMOTE_URL='firefox:4444/wd/hub'
 API_CORPORATE_URL='localhost.localdomain'
 API_SERVICE_URL='localhost4.localdomain'
 API_STAFF_URL='localhost6.localdomain'
+STAGING='0hjfi'
+# A parameter for the staging environment. I want to include the parameters used when committing.
