--- a/config/database.yml
+++ b/config/database.yml
@@ -90,5 +90,36 @@ test:
 
 # FIXME: please implement below
 production:
-  <<: *default
-  database: production_db
+  auth:
+    <<: *default
+    database: test_auth_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_PUB"] : 'localhost' %>
+  auth_replica:
+    <<: *default
+    replica: true
+    database: test_auth_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %>
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_SUB"] : 'localhost' %>
+  docs:
+    <<: *default
+    database: test_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
+  docs_replica:
+    <<: *default
+    replica: true
+    database: test_docs_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
+  core:
+    <<: *default
+    database: test_core_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>
+  core_replica:
+    <<: *default
+    replica: true
+    database: test_core_db
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %>
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_SUB"] : 'localhost' %>
