--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
 EDGE_URL='http://localhost:4333'
 SELENIUM_HOST='firefox'
-SELENIUM_REMOTE_URL='firefox:4444/wd/hub'
+#SELENIUM_REMOTE_URL='firefox:4444/wd/hub'
 API_CORPORATE_URL='localhost.localdomain'
 API_SERVICE_URL='localhost4.localdomain'
 API_STAFF_URL='localhost6.localdomain'
