--- a/.env
+++ b/.env
@@ -7,11 +7,8 @@ POSTGRESQL_CORE_PUB='psql-pub'
 POSTGRESQL_CORE_SUB='psql-sub'
 VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
-EDGE_URL='http://localhost:4333'
-SELENIUM_HOST='firefox'
-#SELENIUM_REMOTE_URL='firefox:4444/wd/hub'
 API_CORPORATE_URL='localhost.localdomain'
 API_SERVICE_URL='localhost4.localdomain'
 API_STAFF_URL='localhost6.localdomain'
-STAGING='0hjfi'
-# A parameter for the staging environment. I want to include the parameters used when committing.
+STAGING='0hjfi' # A parameter for the staging environment. I want to include the parameters used when committing.
+#SELENIUM_REMOTE_URL='chromium:4444'
