--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -11,9 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
+
       - uses: actions/cache@v4
         with:
           path: vendor/bundle
