--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -24,10 +24,10 @@ jobs:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: ${{ runner.os }}-gems-
+
       - run: |
           gem install bundler
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+          bundle install
       - run: |
           ruby -v
       - run: |
