--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -1,4 +1,4 @@
-name: Publishment
+name: Static checking in Ruby on Rails
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     steps:
 
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -31,4 +31,4 @@ jobs:
       - run: |
           ruby -v
       - run: |
-          rails about
+          bin/rubocop
