--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -28,8 +28,8 @@ jobs:
       - name: install gems
         run: bundle install --path vendor/bundle --jobs 4
 
-      - run: |
-          ruby -v
+      - name: Rubocop
+        run: bin/rubocop
 
-      - run: |
-          bin/rubocop
+      - name: bundle
+        run: bundle audit
