--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -7,7 +7,7 @@ on:
       - develop
 
 jobs:
-  publishing:
+  static-checks:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -18,12 +18,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-
-      - uses: actions/cache@v4
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: ${{ runner.os }}-gems-
+          bundler-cache: true
 
       - name: install gems
         run: bundle install --path vendor/bundle --jobs 4
