--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -19,6 +18,12 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
+
+      - uses: actions/cache@v4
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: ${{ runner.os }}-gems-
 
       - name: install gems
         run: bundle install --path vendor/bundle --jobs 4
