--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Docker
         run: docker build -t umaxica/jit .
+
+      - name: Docker compose
+        run: docker compose build
