--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -24,6 +24,9 @@ jobs:
 
       - run: aws configure list
 
+
+      - run: aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com
+
       # Dockerログイン
       # - name: Log in to Amazon ECR
       #   run: |
