--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -37,18 +37,8 @@ jobs:
       - name: Build Docker image
         run: docker build -t umaxica/jit .
 
+      # Dockerイメージのタグ付け
       - run: docker tag umaxica/jit:latest 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com/umaxica/jit:latest
 
+      # Dockerイメージのプッシュ
       - run: docker push 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com/umaxica/jit:latest
-
-      # # Dockerイメージのタグ付け
-      # - name: Tag Docker image
-      #   run: |
-      #     docker tag ${{ secrets.ECR_REPOSITORY }}:${{ secrets.IMAGE_TAG }} \
-      #     $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ secrets.IMAGE_TAG }}
-
-      # # Dockerイメージのプッシュ
-      # - name: Push Docker image to Amazon ECR
-      #   run: |
-      #     docker push \
-      #     $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ secrets.IMAGE_TAG }}
