--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -35,7 +35,7 @@ jobs:
 
       # Dockerイメージのビルド
       - name: Build Docker image
-        run: docker build -t umaxica/jit . --target production
+        run: docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
 
       # scanning with trivy
       - name: Run Trivy vulnerability scanner
