[update] trivy and services: github actions (6)

--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -38,18 +38,18 @@ jobs:
         run: docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
 
       # scanning with trivy
-#      - name: Run Trivy vulnerability scanner
-#        uses: aquasecurity/trivy-action@0.28.0
-        # with:
-        #   image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
-        #   format: 'table'
-        #   exit-code: '1'
-        #   ignore-unfixed: true
-        #   vuln-type: 'os,library'
-        #   severity: 'CRITICAL,HIGH'
+      # - name: Run Trivy vulnerability scanner
+      #   uses: aquasecurity/trivy-action@0.28.0
+      #   with:
+      #     image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+      #     format: 'table'
+      #     exit-code: '1'
+      #     ignore-unfixed: true
+      #     vuln-type: 'os,library'
+      #     severity: 'CRITICAL,HIGH'
 
       # dockerイメージのタグ付け
-      - run: docker tag docker.io/my-organization/my-app:${{ github.sha }} . 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com/umaxica/jit:latest
+      - run: docker tag docker.io/my-organization/my-app:${{ github.sha }} 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com/umaxica/jit:latest
 
       # Dockerイメージのプッシュ
       - run: docker push 841162677945.dkr.ecr.ap-northeast-1.amazonaws.com/umaxica/jit:latest
