--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ VALKEY_SESSION_URL='redis://vk-session:6379'
 API_CORPORATE_URL='localhost.localdomain'
 API_SERVICE_URL='localhost4.localdomain'
 API_STAFF_URL='localhost6.localdomain'
-STAGING='0hjfi' # A parameter for the staging environment. I want to include the parameters used when committing.
+STAGING='b375405' # A parameter for the staging environment. I want to include the parameters used when committing.
 #SELENIUM_REMOTE_URL='chromium:4444'
