--- a/compose.yml
+++ b/compose.yml
@@ -150,6 +150,16 @@ services:
       - "7901:7900"
     depends_on:
       - ror
+  openopenobserve:
+    image: public.ecr.aws/zinclabs/openobserve
+    ports:
+      - 5080:5080
+    volumes:
+      - ../openobserve/data:/data
+    environment:
+      ZO_DATA_DIR: /data
+      ZO_ROOT_USER_EMAIL: root@example.com
+      ZO_ROOT_USER_PASSWORD: default
 volumes: #
   psql-pub-volume:
   psql-sub-volume:
