--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -1,4 +1,4 @@
-name: Static Checking for Rails
+name: [CI] Ruby on Rails
 
 on:
   push:
@@ -25,6 +25,12 @@ jobs:
       run:
         shell: bash
 
+    env:
+      # RailsがRedisとPostgreSQLに接続するための環境変数
+      REDIS_URL: redis://localhost:6379/0
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/myapp_test
+      RAILS_ENV: test
+
     # Service containers to run with `container-job`
     services:
       redis:
@@ -36,6 +42,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 6379:6379  # Redisのデフォルトポートをマッピング
+
       postgres:
         # Docker Hub image
         image: postgres
@@ -48,6 +57,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432  # PostgreSQLのデフォルトポートをマッピング
 
     steps:
       - name: Checkout code
