--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -77,3 +77,6 @@ jobs:
 
       - name: bundle audit
         run: bundle exec bundle audit check --update
+
+      - name: rails test
+        run: printenv
