--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - develop # delete this line
+#      - develop # delete this line
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
