--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -79,4 +79,4 @@ jobs:
         run: bundle exec bundle audit check --update
 
       - name: rails test
-        run: bundle exec rails test
+        run: bundle exec rails db:migrate && bundle exec rails test
