[INCREMENTAL] set up github actions preference. (7)

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ POSTGRESQL_AUTH_PUB='psql-pub'
 POSTGRESQL_AUTH_SUB='psql-sub'
 POSTGRESQL_CORE_PUB='psql-pub'
 POSTGRESQL_CORE_SUB='psql-sub'
+POSTGRESQL_DOCS_PUB='psql-pub'
+POSTGRESQL_DOCS_SUB='psql-sub'
 VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
 API_CORPORATE_URL='localhost.localdomain'
