--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -30,6 +30,14 @@ jobs:
       REDIS_URL: redis://localhost:6379/0
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/myapp_test
       RAILS_ENV: test
+      POSTGRESQL_AUTH_PUB='psql-pub'
+      POSTGRESQL_AUTH_SUB='psql-sub'
+      POSTGRESQL_CORE_PUB='psql-pub'
+      POSTGRESQL_CORE_SUB='psql-sub'
+      POSTGRESQL_DOCS_PUB='psql-pub'
+      POSTGRESQL_DOCS_SUB='psql-sub'
+      VALKEY_CACHE_URL='redis://vk-cache:6379'
+      VALKEY_SESSION_URL='redis://vk-session:6379'
 
     # Service containers to run with `container-job`
     services:
