[INCREMENTAL] set up github actions preference. (12)

--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -29,12 +29,14 @@ jobs:
       # RailsがRedisとPostgreSQLに接続するための環境変数
       REDIS_URL: redis://localhost:6379/0
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/myapp_test
+      POSTGRES_USER: 'default'
+      POSTGRES_PASSWORD: 'password'
       POSTGRESQL_AUTH_PUB: 'localhost'
       POSTGRESQL_AUTH_SUB: 'localhost'
       POSTGRESQL_CORE_PUB: 'localhost'
       POSTGRESQL_CORE_SUB: 'localhost'
       POSTGRESQL_DOCS_PUB: 'localhost'
-      POSTGRESQL_DOCS_SUB: 'localhots'
+      POSTGRESQL_DOCS_SUB: 'localhost'
       VALKEY_CACHE_URL: 'redis://vk-cache:6379'
       VALKEY_SESSION_URL: 'redis://vk-session:6379'
 
@@ -57,7 +59,8 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: default
+          POSTGRES_USER: 'default'
+          POSTGRES_PASSWORD: 'password'
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
