--- a/config/database.yml
+++ b/config/database.yml
@@ -17,35 +17,35 @@ development:
   auth:
     <<: *default
     database: development_auth_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_PUB"] : 'localhost' %>
   auth_replica:
     <<: *default
     replica: true
     database: development_auth_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_PUB"] : 'localhost' %>
   docs:
     <<: *default
     database: development_docs_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
-    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_DOCS_PUB"] : 'localhost' %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
   docs_replica:
     <<: *default
     replica: true
     database: development_docs_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
-    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_DOCS_PUB"] : 'localhost' %>  # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
+    host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
   core:
     <<: *default
     database: development_core_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
   core_replica:
     <<: *default
     replica: true
     database: development_core_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
 
 
@@ -56,35 +56,35 @@ test:
   auth:
     <<: *default
     database: test_auth_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_PUB"] : 'localhost' %>
   auth_replica:
     <<: *default
     replica: true
     database: test_auth_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_SUB"] : 'localhost' %>
   docs:
     <<: *default
     database: test_docs_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %> # FIXME: change to use replica
   docs_replica:
     <<: *default
     replica: true
     database: test_docs_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
   core:
     <<: *default
     database: test_core_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>
   core_replica:
     <<: *default
     replica: true
     database: test_core_db
-    port: <%= File.exist?('/.dockerenv') ? 5433 : 5432 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_SUB"] : 'localhost' %>
 
 
@@ -99,7 +99,7 @@ production:
     <<: *default
     replica: true
     database: test_auth_db
-    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_AUTH_SUB"] : 'localhost' %>
   docs:
     <<: *default
@@ -110,7 +110,7 @@ production:
     <<: *default
     replica: true
     database: test_docs_db
-    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %> # FIXME: change to use replica
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %> # FIXME: change to use replica
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_PUB"] : 'localhost' %>  # FIXME: change to use replica
   core:
     <<: *default
@@ -121,5 +121,5 @@ production:
     <<: *default
     replica: true
     database: test_core_db
-    port: <%= File.exist?('/.dockerenv') ? 5432 : 5434 %>
+    port: <%= File.exist?('/.dockerenv') ? 5432 : 5433 %>
     host: <%= File.exist?('/.dockerenv') ? ENV["POSTGRESQL_CORE_SUB"] : 'localhost' %>
