--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3000
 POSTGRES_USER=default
 POSTGRES_PASSWORD=password
+POSTGRES_PORT=5432
 POSTGRESQL_AUTH_PUB='psql-pub'
 POSTGRESQL_AUTH_SUB='psql-sub'
 POSTGRESQL_CORE_PUB='psql-pub'
