--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -66,6 +66,6 @@ jobs:
         run: bundle exec bundle audit check --update
       - name: Rails test without Syste Test
         run: bin/rails db:create && bin/rails db:migrate && bin/rails test:all
-      # - name: Debug
-      #   uses: mxschmitt/action-tmate@v3
-      #   timeout-minutes: 15
+      - name: Debug
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 15
