--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -64,8 +64,8 @@ jobs:
         run: bundle exec brakeman -z -q
       - name: bundle audit
         run: bundle exec bundle audit check --update
-      - name: Rails test without Syste Test
-        run: bin/rails db:create && bin/rails db:migrate && bin/rails test:all
+      # - name: Rails test without Syste Test
+      #   run: bin/rails db:create && bin/rails db:migrate && bin/rails test:all
       - name: Debug
         uses: mxschmitt/action-tmate@v3
         timeout-minutes: 15
